2019-04-02 Jan Kotanski <jan.kotanski@desy.de>
	* fetch geometry metadata from source option
	* read geometry metadata from cbf
	* fix for autofactorrange levels on changing tools
	* tagged as 2.5.0

2019-03-28 Jan Kotanski <jan.kotanski@desy.de>
	* fix for arange: cannot compute length in histogramWidget
	* tagged as 2.4.1

2019-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* add DetectorROIsParams attribute and sardana env variable
	* make hidra server combobox editable
	* tagged as 2.4.0

2019-03-21 Jan Kotanski <jan.kotanski@desy.de>
	* additional fix conventions rois coordinates for analysisdevice
	* tagged as 2.3.5

2019-03-21 Jan Kotanski <jan.kotanski@desy.de>
	* fix conventions rois coordinates for analysisdevice
	* fix rois coordinate selection
	* set default ROIs alias name
	* tagged as 2.3.4

2019-03-18 Jan Kotanski <jan.kotanski@desy.de>
	* do not show image on empty plot
	* tagged as 2.3.3

2019-03-18 Jan Kotanski <jan.kotanski@desy.de>
	* fix on reopening nexus server
	* improve startup of test servers
	* update hidra host list
	* tagged as 2.3.2

2019-03-05 Jan Kotanski <jan.kotanski@desy.de>
	* add star?.png to manifest
	* tagged as 2.3.1

2019-03-05 Jan Kotanski <jan.kotanski@desy.de>
	* add editor bookmarks
	* fixes for close action
	* tagged as 2.3.0

2019-03-01 Jan Kotanski <jan.kotanski@desy.de>
	* add editors for dictionary configurations
	* tagged as 2.2.0

2019-02-27 Jan Kotanski <jan.kotanski@desy.de>
	* add Tango Events image source
	* tagged as 2.1.0

2019-02-26 Jan Kotanski <jan.kotanski@desy.de>
	* hide empty images from limaccds
	* tagged as 2.0.5

2019-02-21 Jan Kotanski <jan.kotanski@desy.de>
	* fix for wrong image orientation of limaccd images
	* tagged as 2.0.4

2019-02-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix for wrong image rotation by ROI tool
	* tagged as 2.0.3

2019-01-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix for loading files
	* tagged as 2.0.2

2019-01-15 Jan Kotanski <jan.kotanski@desy.de>
	* fixes for py3 prints