@@ -2,6 +2,8 @@
 	* fetch geometry metadata from source option
 	* read geometry metadata from cbf
 	* fix for autofactorrange levels on changing tools
+	* add order to DetectorROIsParams attribute (change to list)
+	* add order to DetectorROIsParams sardana env variable (change to list)
 	* tagged as 2.5.0
 
 2019-03-28 Jan Kotanski <jan.kotanski@desy.de>
